--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#studio">Studio</a>
+                    <a href="/">Studio</a>
                 </li>
                 <li>
-                    <a href="#portfolio">Portfolio</a>
+                    <a href="/">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#contacts">Contacts</a>
+                    <a href="/">Contacts</a>
                 </li>
             </ul>
         </nav>
@@ -75,19 +75,18 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img class="Portfolio" src="/images/Mark.jpg" alt="Photo Mark Guerrero" width="264"
-                        height="260" /><br />
+                    <img class="Portfolio" src="/images/Mark.jpg" alt="Photo Mark Guerrero" width="264" height="260" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img class="Portfolio" src="/images/Tom.jpg" alt="Photo Tom Ford" width="264" height="260" /><br />
+                    <img class="Portfolio" src="/images/Tom.jpg" alt="Photo Tom Ford" width="264" height="260" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img class="Portfolio" src="/images/Camila.jpg" alt="Photo Camila Garcia" width="264"
-                        height="260" /><br />
+                        height="260" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
