--- a/index.html
+++ b/index.html
@@ -75,24 +75,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img class="Portfolio" src="/images/Mark.jpg" alt="Photo Mark Guerrero" width="264" height="260" />
+                    <img src="/images/Mark.jpg" alt="Photo Mark Guerrero" width="264" height="260" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img class="Portfolio" src="/images/Tom.jpg" alt="Photo Tom Ford" width="264" height="260" />
+                    <img src="/images/Tom.jpg" alt="Photo Tom Ford" width="264" height="260" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img class="Portfolio" src="/images/Camila.jpg" alt="Photo Camila Garcia" width="264"
-                        height="260" />
+                    <img src="/images/Camila.jpg" alt="Photo Camila Garcia" width="264" height="260" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img class="Portfolio" src="/images/Daniel.jpg" alt="Photo Daniel Wilson" width="264"
-                        height="260" />
+                    <img src="/images/Daniel.jpg" alt="Photo Daniel Wilson" width="264" height="260" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
