--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <a href="/">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <nav>
             <ul>
                 <li>
@@ -36,8 +36,10 @@
     </header>
 
     <main>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
 
         <section>
             <h2>Our Features</h2>
@@ -45,7 +47,8 @@
                 <li>
                     <h3>Strategy</h3>
                     <p>
-                        Our goal is to indentify the business problem to walk away with the prfect and crative solusion.
+                        Our goal is to identify the business problem to walk away with the perfect and creative
+                        solution.
                     </p>
                 </li>
                 <li>
@@ -75,22 +78,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="images/Mark.jpg" alt="Photo Mark Guerrero" width="264" height="260" />
+                    <img src="./images/Mark.jpg" alt="Photo Mark Guerrero" width="264" height="260" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="images/Tom.jpg" alt="Photo Tom Ford" width="264" height="260" />
+                    <img src="./images/Tom.jpg" alt="Photo Tom Ford" width="264" height="260" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="images/Camila.jpg" alt="Photo Camila Garcia" width="264" height="260" />
+                    <img src="./images/Camila.jpg" alt="Photo Camila Garcia" width="264" height="260" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="images/Daniel.jpg" alt="Photo Daniel Wilson" width="264" height="260" />
+                    <img src="./images/Daniel.jpg" alt="Photo Daniel Wilson" width="264" height="260" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -99,7 +102,7 @@
 
     </main>
     <footer>
-        <a href="/">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
